fixed weird number cut off for number input in profile

--- a/front-end/src/Profile.css
+++ b/front-end/src/Profile.css
@@ -20,8 +20,9 @@
 }
 #number{
     width: 50px;
-    height: 24px;
-    font-size: 22px;
+    height: 30px;
+    font-size: 20px;
+    text-align: center;
 }
 #save{
     width: 80px;
